// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput > should match snapshot (default) 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    class="mocked-styled-1 elsearch-input"
    data-size="medium"
  >
    <svg
      class="el-icon"
      color="primary"
      data-size="sm"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
      />
    </svg>
    <input
      class="mocked-styled-0 elinput"
      name="search-input"
      placeholder="Search"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchInput > should match snapshot when disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    class="mocked-styled-1 elsearch-input"
    data-size="medium"
  >
    <svg
      class="el-icon"
      color="primary"
      data-size="sm"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
      />
    </svg>
    <input
      class="mocked-styled-0 elinput"
      disabled=""
      name="search-input"
      placeholder="Search"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchInput > should match snapshot with large size 1`] = `
<DocumentFragment>
  <div
    aria-disabled="false"
    class="mocked-styled-1 elsearch-input"
    data-size="large"
  >
    <svg
      class="el-icon"
      color="primary"
      data-size="sm"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
      />
    </svg>
    <input
      class="mocked-styled-0 elinput"
      name="search-input"
      placeholder="Search"
      value=""
    />
  </div>
</DocumentFragment>
`;
